# react-native-macos

./: .bazelignore  .bazelrc  .eslintignore  .eslintrc  .flowconfig  .flowconfig.android  .flowconfig.macos  .gitattributes  .gitignore  .prettierignore  .prettierrc  .yarnrc.yml  BUILD.bazel  Brewfile  CONTRIBUTING.md  Gemfile  KeepingRecent.md  LICENSE  MODULE.bazel  README.md  RNPrefixHeader.h  React-Core.podspec  React.podspec  UBSAN_FIX_SUMMARY.md  flake.nix  guardian_baselines.gdnbaselines  index.js  jest.config.js  metro.config.js  nx.json  nx.test.json  package.json  react-native.config.js  react.gradle  yarn.config.cjs
.ado/: Brewfile.lock.json  ado-start-verdaccio.sh  ado-test-cleanup.sh  ado-test-setup.sh  android-pr.yml  apple-integration.yml  apple-pr.yml  gitTagRelease.js  markPrivate.js  npmOfficePack.js  publish.js  publish.yml  release-config.yml  removePrivate.js  setup_droid_deps.sh  versionUtils.js
.ado/jobs/: build-test-rntester.yml  npm-esrp-release.yml  npm-pack.yml  npm-publish-dry-run.yml  npm-publish.yml  react-native-test-app-integration.yml  test-react-native-macos-init.yml
.ado/scripts/: apply-additional-tags.mjs  configure-publish.mts  npm-pack.mts  prepublish-check.mjs  release.mjs  validate-esrp-config.mts  verdaccio.sh  waitForVerdaccio.mjs  xcodebuild.sh
.ado/templates/: android-build-office-setup.yml  android-build-office.yml  android-nuget-pack.yml  apple-droid-node-patching.yml  apple-job-javascript.yml  apple-job-publish.yml  apple-job-react-native.yml  apple-pr-javascript.yml  apple-release-setup.yml  apple-steps-publish.yml  apple-tools-setup.yml  apple-xcode-build.yml  apple-xcode-select.yml  npm-publish-steps.yml  npm-publish.yml  prep-android-nuget-linux.yml  prep-android-nuget.yml  react-native-macos-init.yml  verdaccio-publish.yml
.ado/variables/: mac.yml  vars.yml
.ado/verdaccio/: config.yaml
.ai/: index.md
.ai/commands/: backport.md  merge-minor.md
.changeset/: calm-clouds-release.md  config.json  great-zebras-tease.md  sync-react-native-0-83-10.md  sync-react-native-084.md  sync-react-native-085.md  sync-react-native-086.md
.circleci/: README.md  config.yml
.circleci/Dockerfiles/: Dockerfile.android
.claude/commands/: backport.md  merge-minor.md
.config/1espt/: PipelineAutobaseliningConfig.yml
.github/: CODEOWNERS  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  pull.yml
.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yml  feature_request.yaml  module_request.yaml
.github/policies/: resourceManagement.yml
.github/scripts/: change.mts  changeset-version-with-postbump.mts  export-versions.mts  resolve-hermes.mts  validate-changesets.mts
.github/workflow-scripts/: checkForReproducer.js
.github/workflows/: autorebase.yml  bazel.yml  build-hermes-macos-spm.yml  build-react-native-dependencies-pr.yml  codeql-analysis.yml  danger-pr.yml  integration.yml  microsoft-backport.yml  microsoft-build-hermes.yml  microsoft-build-rntester-prebuilt.yml  microsoft-build-rntester.yml  microsoft-build-spm.yml  microsoft-build-website.yml  microsoft-changesets-version.yml  microsoft-pr.yml  microsoft-prebuild-macos-core.yml  microsoft-publish.yml  microsoft-react-native-test-app-integration.yml  microsoft-resolve-hermes.yml  microsoft-test-react-native-macos-init.yml  needs-attention.yml  nightly.yml  pr.yml  prebuild-macos-core.yml  publish-release.yml  publish.yml  test-all.yml  test-docker-android.yml  test-hermes-v1-android.yml  test-hermes-v1.yml  validate-dotslash-artifacts.yml
.nx/version-plans/: version-plan-1739175990049.md  version-plan-1741765321082.md  version-plan-1742773021183.md  version-plan-1742941422258.md  version-plan-1743111896868.md  version-plan-1743631200000.md  (+19 more)
RNTester/: Podfile
React/: React-Core.podspec  React-DevSupport.podspec  React-RCTFabric.podspec
ReactAndroid/: Android-prebuilt.mk  ReactAndroid.nuspec  build.gradle  gradle.properties
ReactCommon/: React-Fabric.podspec  ReactCommon.podspec  make.inc
ReactTurboModuleCxx/: React-TurboModuleCxx-RNW.podspec  React-TurboModuleCxx-WinRTPort.podspec
android-patches/: README.md
bots/: dangerfile.js
change/: @react-native-mac-virtualized-lists-51396bb8-7fa3-4fe7-b116-879c50f72e88.json  @react-native-mac-virtualized-lists-d397b7c8-5ac3-4deb-8d0f-58f565bd418f.json  office-android-patches-2020-04-14-07-32-49-EditTextFocus.json  office-android-patches-2020-04-14-08-26-38-EditTextFocus.json  office-android-patches-2020-04-14-08-26-49-EditTextFocus.json  office-android-patches-2020-04-14-08-27-50-EditTextFocus.json  react-native-macos-init-2020-04-03-21-47-57-tomun-publish-react-native-init.json
docs/: DiffsWithUpstream.md  GitFlow.md  Releases.md  WritingNativeComponents.md  bazel.md
docs_archive/: Releases.md
docsite/: .yarnrc.yml  docusaurus.config.ts  package.json  sidebarsApi.ts
jest/: preprocessor.js
local-cli/: generate-macos.js
processor/: build.gradle
repo-config/: package.json
scripts/: .tests.env  autoSync.js  autolink-ios.rb  bump-oss-version.js  generate-artifacts.js  npm-utils.js  packager.sh  prepare-package-for-release.js  publish-npm.js  react-native-xcode.sh  react_native_pods.rb  release-utils.js  run-ci-e2e-tests.js  run-ci-javascript-tests.js  set-rn-version.js  test-manual-e2e.sh  update-android-patches.js  update-android-patches.ts  update_podfile_lock.sh
template/: _flowconfig  package.json
third-party-podspecs/: DoubleConversion.podspec  Folly.podspec  RCT-Folly.podspec  boost-for-react-native.podspec  boost.podspec  glog.podspec  libevent.podspec
tools/bazel/apple/: BUILD.bazel  generate_spm_targets.js  prebuilt_xcframeworks.bzl  reconstruct_react_headers.py  source_headers.bzl  spm_native_graph.bzl  xcframeworks.bzl
tools/bazel/berry/example/: BUILD.bazel  package.json  verify.js
tools/bazel/js/: BUILD.bazel  build_first_party.js  copy_tree.js  first_party.bzl  gen_package_builds.mjs  metro.bzl  workspace_package.bzl
tools/bazel/react_native/: BUILD.bazel  build_codegen_lib.js  codegen_runner.js  defs.bzl  fbreactnativespec_runner.js
types/: index.d.ts
(+780 files in other folders)
